--- a/traps/后端.md
+++ b/traps/后端.md
@@ -118,12 +118,18 @@ CACHES = {
 }
 ```
 
-# 使用mysql时
-
-## 给字段分配长度太少
+# 使用mysql时给字段分配长度太少
 
 在mysql5.0版本以上
 
 UTF-8 ：一个汉字等于3个字节，英文是一个字节
 
 GBK：一个汉字等于2个字节，英文是一个字节
+
+# 后端已经添加了 cors 验证还是报错
+
+前端请求 url 为 "/foo/bar/"  
+后端接受 url 为 "/foo/bar" (即没有最后的斜杠)
+
+将前端请求的斜杠去掉即可
+
