--- a/others/学习纪年表.md
+++ b/others/学习纪年表.md
@@ -8,8 +8,9 @@
 
 日期|成果
 ---|---
-5-12|搭建了[自己的博客](http://101.133.217.104/blog/static)(vue+django)
-3-20|实现了[相当多人工智能算法](http://101.133.217.104/blog/static/blog/27)
+6-13|重建了[博客](http://xiong35.cn/)(nuxt+go)
+5-12|<del>搭建了[自己的博客](http://xiong35.cn/)(vue+django)</del>
+3-20|实现了[相当多人工智能算法](http://xiong35.cn/blog2.0/articles/blog/26)
 2-23|用Unity制作了[坦克大战游戏](https://github.com/xiong35/UnityWork/tree/master/Tank)
 2-8|拥有了自己的服务器
 
