--- a/traps/后端.md
+++ b/traps/后端.md
@@ -1,16 +1,14 @@
 
-# 用django读取http post的数据时
-## 不能直接在request.POST里取出数据
+# 用django读取http post的数据时不能直接在request.POST里取出数据
 
-此时body里的数据还是字符串, 需要用函数读取
+此时body里的数据还是字符串/二进制编码, 需要用函数读取
 
 ```python
 info = json.load(request.body)
 ```
 
 
-# 使用django的manytomany feild时
-## 新增数据要添加有多对多关系的数据
+# 使用 django 的 manytomany feild 新增数据添加有多对多关系的数据
 
 以本博客为例, tags 和 artical 时多对多关系, 需要先选出所有相关的 tag, 在逐一对他们操作
 
@@ -20,8 +18,7 @@ for tag in tags:
     record.tags.add(tag) 
 ```
 
-# 对django发送post时出现以下问题
-## 同源策略禁止读取位于xxx的远程资源。（原因：CORS 请求未能成功）
+# 对django发送post时出现以下问题: 同源策略禁止读取位于xxx的远程资源。（原因：CORS 请求未能成功）
 
 在进行真正的post请求前, 前端会发送一个OPTIONS请求  
 它用于获取当前URL所支持的方法。若请求成功，则它会在HTTP头中包含一个名为“Allow”的头，值是所支持的方法，如“GET, POST”  
@@ -41,10 +38,9 @@ class bar(MiddlewareMixin):
         return response
 ```
 
-# 对django发送post时出现以下问题
-## 同源策略禁止读取位于xxx的远程资源。（原因：CORS 预检响应的 'Access-Control-Allow-Headers'，不允许使用头 'content-type'）
+# 对django发送post时出现以下问题: 同源策略禁止读取位于xxx的远程资源。（原因：CORS 预检响应的 'Access-Control-Allow-Headers'，不允许使用头 'content-type'）
 
-参见[这篇文章](http://101.133.217.104/blog/static/trap/7)  
+参见[这篇文章](http://xiong35.cn/blog2.0/articles/trap/38)  
 在上述文章的基础上, 向 bar 函数中添加以下代码, 干脆把所有控制解除(不太安全)
 
 ```python
@@ -58,9 +54,7 @@ response["Access-Control-Expose-Headers"] = "*"
 参考文章: [r.f.](https://www.cnblogs.com/caimuqing/p/6733405.html)
 
 
-# django中使用基于数据库+类视图的缓存
-
-### 用manage.py新建数据表
+# django中使用基于数据库+类视图的缓存, 用manage.py新建数据表
 
 运行```python manage.py createcachetable TABLE_NAME```  
 在settings.py中添加
@@ -133,3 +127,6 @@ GBK：一个汉字等于2个字节，英文是一个字节
 
 将前端请求的斜杠去掉即可
 
+# 后端返回 401, 前端无法读取数据
+
+后端返回非 200 的状态码都无法携带信息, 要想携带信息必须返回 200 状态码, 再在其中传递真正的状态码和信息
