--- a/traps/后端.md
+++ b/traps/后端.md
@@ -130,3 +130,7 @@ GBK：一个汉字等于2个字节，英文是一个字节
 # 后端返回 401, 前端无法读取数据
 
 后端返回非 200 的状态码都无法携带信息, 要想携带信息必须返回 200 状态码, 再在其中传递真正的状态码和信息
+
+# mysql 修改字段类型而不影响数据
+
+```alter table 表名 modify column 字段名 类型;```
