--- a/汇编/快速大小写转化与判断.md
+++ b/汇编/快速大小写转化与判断.md
@@ -5,8 +5,8 @@
 一个字符的大小写之间差了 32, 也就是 ```0010 0000B```  
 而ASCII的 A 是 ```0100 0001B```, a 是 ```0110 0001B```, 只有第 6 位二进制位不同  
 
-所以只用判断第 6 位是否位 1 就可以判断大小写(前提是确定是合法字母字符)  
-```<x> && 1101 1111B```就可以转化为大写  
-```<x> || 0010 0000B```就可以转化为小写
+所以只用判断第 6 位是否为 1 就可以判断大小写(前提是确定是合法字母字符)  
+```<x> & 1101 1111B```就可以转化为大写  
+```<x> | 0010 0000B```就可以转化为小写
 
 妙啊!
