增加了信道复用部分

--- a/computerNetwork/计网学习笔记(一).md
+++ b/computerNetwork/计网学习笔记(一).md
@@ -35,4 +35,19 @@
 2. 循环冗余码
 3. 发送时: 要传的数据 % 生成多项式 = 冗余码, 发送 数据+冗余码
 4. 接受时: (数据 + 冗余码) % 生成多项式 = 0
-5. [海明码](https://www.cnblogs.com/godoforange/p/12003676.html)
+5. 
+6. [海明码](https://www.cnblogs.com/godoforange/p/12003676.html)
+
+### 信道复用
+
+1. 静态划分信道
+  1. 频分多址
+  2. 时分多址
+  3. 码分多址
+2. 动态分配信道(二进制指数退避算法)
+  1. ALOHA协议
+  2. CSMA(根据信道忙时如何选择发送时机分为:)
+    1. 1-坚持
+    2. p-坚持
+    3. 非坚持
+  3. CSMA/CD
