--- a/computerNetwork/计网学习笔记(一).md
+++ b/computerNetwork/计网学习笔记(一).md
@@ -23,11 +23,11 @@
 
 ### 流量控制
 
-协议|发送窗口大小|接收窗口大小
----|---|---
-停止等待协议|1|1
-后退n帧协议|n|1
-选择重传协议|n|n
+| 协议         | 发送窗口大小 | 接收窗口大小 |
+| ------------ | ------------ | ------------ |
+| 停止等待协议 | 1            | 1            |
+| 后退n帧协议  | n            | 1            |
+| 选择重传协议 | n            | n            |
 
 ### 差错控制
 
@@ -38,7 +38,7 @@
 5. 
 6. [海明码](https://www.cnblogs.com/godoforange/p/12003676.html)
 
-### 信道复用
+### 访问控制
 
 1. 静态划分信道
   1. 频分多址
@@ -50,4 +50,17 @@
     1. 1-坚持
     2. p-坚持
     3. 非坚持
-  3. CSMA/CD
+  3. CSMA/CD(detection, 有线)
+  4. CSMA/CA(avoid, 无线)
+3. 轮询访问MAC(主节点轮流邀请从节点是否需要发送数据)
+  1. 令牌传递协议
+
+## 网络层
+
+### 路由选择转发
+
+### 拥塞控制
+
+### 异构网络互联
+
+  
