computer network & a c trap

--- a/computerNetwork/计网学习笔记(一).md
+++ b/computerNetwork/计网学习笔记(一).md
@@ -57,6 +57,17 @@
 
 ## 网络层
 
+### 分片
+
+链路层最大传输单元是1500字节, 为了不让数据报过大, 需要进行分片
+
+- 标识(16位): 标记同一个数据报的分片
+- 标志(3位)
+  - 第一位不管
+  - 第二位DF: 是否禁止分片
+  - 第三位MF: 是否还有后续分片
+- 片偏移(8位): 标记当前分片在原来报文中的起始位置, 以 8Byte 为单位
+
 ### 路由选择转发
 
 ### 拥塞控制
