--- a/traps/后端.md
+++ b/traps/后端.md
@@ -134,3 +134,19 @@ GBK：一个汉字等于2个字节，英文是一个字节
 # mysql 修改字段类型而不影响数据
 
 ```alter table 表名 modify column 字段名 类型;```
+
+# egg 中从 query 里取出的字段类型为 string
+
+而不会自动转化为 number 之类的
+
+# nginx + axios 上传文件限制
+
+在做上传文件功能时, 上传小图片测试良好, 但是就是传不了大图, 查阅后发现自己犯了两个错误
+
+## nginx 默认文件大小限制
+
+nginx 的默认文件传输上线是 1M, 一般照片都会超过此大小, 需设置`client_max_body_size 15M;`来提高限制大小
+
+## axios timeout
+
+axios 默认 timeout 是不做限制, 但是我先前设置了 5000 ms 的超时限制, 照片大的时候可能会超时, 后续提高了 timeout 的值就好了
