--- a/_前端/代码规范.md
+++ b/_前端/代码规范.md
@@ -155,13 +155,13 @@ export default function Foo() {
 /* GOOD */
 // in jsx, 写结构
 export default function Foo(props) {
-  const { data1, data2, setData3, setData4 } = setupFoo(props);
+  const { data1, data2, setData3, setData4 } = useSetupFoo(props);
 
   return <div>{/* blabla */}</div>;
 }
 
 // in hooks/foo.js, 写逻辑
-export function setupFoo(props) {
+export function useSetupFoo(props) {
   const [data1, setData1] = useState();
   const [data2, setData2] = useState();
   const [data3, setData3] = useState();
