--- a/_面经/头条实习面经 2021-11-26.md
+++ b/_面经/头条实习面经 2021-11-26.md
@@ -78,4 +78,4 @@ function longestSubarray(nums) {
 3. **讲讲怎么实现一个四则运算计算器(解析一个算数字符串)**, 讲了可以遍历一遍构建一颗抽象语法树, 再
    遍历这棵树得到答案, 追问还有别的方案吗, 答了可以利用逆波兰表达式+栈来实现, 但是本质和构建树是一样的
 
-> 后续因为我的实习时间太短中断了流程 qwq, 转到上海字节那边去了. 下次面试参见:
+> 后续因为我的实习时间太短中断了流程 qwq, 转到上海字节那边去了. 下次面试参见: [抖音音乐实习面经 2021-12-1](https://github.com/xiong35/blogs/blob/master/_%E9%9D%A2%E7%BB%8F/%E6%8A%96%E9%9F%B3%E9%9F%B3%E4%B9%90%E5%AE%9E%E4%B9%A0%E9%9D%A2%E7%BB%8F%202021-12-1.md)
