抖音音乐实习面经 2021-12-1 一面

--- a/_面经/抖音音乐实习面经 2021-12-1.md
+++ b/_面经/抖音音乐实习面经 2021-12-1.md
@@ -1,3 +1,62 @@
 # 抖音音乐实习面经 2021-12-1
 
-##
+## 一面
+
+1. **项目经历**, 细说了好半天,聊了一些技术细节
+2. **最近在学什么**, 讲了学 TS, css 文档, react
+3. **列举一下你知道的 react hooks**, 都讲了一遍
+4. **`useLayoutEffect`和`useEffect`的区别**, 没答上来, 见[官方文档](https://reactjs.org/docs/hooks-reference.html#uselayouteffect)和[这篇文章](https://zhuanlan.zhihu.com/p/348701319)
+5. **`useCallback`的作用? 与`useMemo`的区别?**: `useCallback` 的真正目的还是在于缓存了每次渲染
+   时 inline callback 的实例，这样方便配合上子组件的 `shouldComponentUpdate` 或者 `React.memo` 起到减少
+   不必要的渲染的作用。需要不断提醒自己注意的是，在大部分 callback 都会是 inline callback 的未
+   来，`React.memo` 和 `React.useCallback` 一定记得需要配对使用，缺了一个都可能导致性能不升反“降”，毕
+   竟无意义的浅比较也是要消耗那么一点点点的性能。`useMemo`不只能存函数还能存一些变动较小的数据
+6. **讲讲怎么解决跨域问题**, 答了 后端设置, 前端代理, 前端改 DNS 三种, 更多方法(我没想到还有这么多)见[这里](https://segmentfault.com/a/1190000022398875)
+7. **cookie 是否会跨域? 子域名能否访问父域名的 cookie?**: 见[cookie 超级详解](http://www.xiong35.cn/blog3.0/post/614d97f8f166d62decd2c59f)
+8. **讲讲 https**, 讲的不够好, 见[这篇文章](https://zhuanlan.zhihu.com/p/43789231)
+9. **讲讲守护进程的实现方式**, 不会
+10. **讲讲 OSI 7 层模型**, 讲出来了
+11. **讲讲进城和线程的区别**, 不会
+12. **this 指向题**, ez
+13. TS 题
+
+    ```ts
+    /** 实现这个函数, 并讲讲它的作用 */
+    function getKeyOfEnum<TEnum>(e: TEnum): keyof TEnum {
+      // 需要 filter 因为 keys 会返回 keys 和 "0", "1"...
+      const keys = Object.keys(e).filter((k) => isNaN(parseInt(k)));
+
+      return keys[Math.floor(Math.random() * keys.length)] as keyof TEnum;
+    }
+    // 很迷惑, 我最后都没想明白他是干嘛用的
+    // 后续, 看了StackOverflow 上有这个问题, 看明白了属于是
+    // https://stackoverflow.com/questions/50376977/generic-type-to-get-enum-keys-as-union-string-in-typescript
+    ```
+
+14. JS 题
+
+    ```js
+    /**
+     * 调用一个函数, 若出现异常就一段时间后重试, 直到成功或达到最大次数
+     * @param fn 需要重试的函数
+     * @param count 最大重试次数
+     * @param delay 重试间的间隔
+     * @returns {Promise<ReturnType<fn> | undefined>} 假如成功返回 fn 的返回值, 否则返回 undefined
+     */
+    async function retryNTimes(fn, count, delay) {
+      function wait() {
+        return new Promise((res) => {
+          setTimeout(res, delay);
+        });
+      }
+
+      do {
+        try {
+          return fn();
+        } catch {}
+        await wait();
+      } while (count--);
+    }
+    ```
+
+15. **[剑指 Offer 29. 顺时针打印矩阵](https://leetcode-cn.com/problems/shun-shi-zhen-da-yin-ju-zhen-lcof/)**, 没问题
