add 抖音音乐实习面经 2021-12-1 二面

--- a/_面经/2021-12-1 抖音音乐实习面经.md
+++ b/_面经/2021-12-1 抖音音乐实习面经.md
@@ -60,3 +60,171 @@
     ```
 
 15. **[剑指 Offer 29. 顺时针打印矩阵](https://leetcode-cn.com/problems/shun-shi-zhen-da-yin-ju-zhen-lcof/)**, 没问题
+
+> 一面轻松愉快, 面试官也很和善 qwq
+
+## 二面
+
+1. **xss 攻击的实现与防范**, 参见[这篇文章](http://www.xiong35.cn/blog3.0/post/614d9872f166d62decd2c88c)
+2. **http 请求分为什么部分, 有哪些 header**, 前面答出来了, headers 部分答得一般. 见
+   [An overview of HTTP](https://developer.mozilla.org/en-US/docs/Web/HTTP/Overview#http_flow)和
+   [HTTP headers](https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers)
+3. **谈谈 http 2.0**, 不会 qwq, 后续, 参见[深入理解 http2.0 协议，看这篇就够了！](https://juejin.cn/post/6844903984524705800), 总结为;
+   1. 对 1.x 协议语意的完全兼容
+   2. 二进制分帧
+   3. 多路复用
+   4. 头部压缩
+   5. 区分请求优先级
+   6. 服务端推送
+4. **cookie 有什么特点, 大小是多少**, 见[cookie 超级详解](http://www.xiong35.cn/blog3.0/post/614d97f8f166d62decd2c59f)
+5. **数据库索引方式**, 不会 qwq
+6. 怎么优化一个界面的请求速度
+7. 编程题, 实现一个任务调度类, 做的比较好
+
+   ```ts
+   type Task = () => Promise<any> | void;
+   class Queue {
+     tasks: Task[] = [];
+
+     task(fn: Task): Queue {
+       this.tasks.push(fn);
+       return this;
+     }
+
+     async start() {
+       for (let task of this.tasks) {
+         await task();
+       }
+     }
+   }
+
+   new Queue()
+     .task(() => {
+       console.log(1);
+     })
+     .task(() => {
+       console.log(2);
+     })
+     .task(() => {
+       console.log(3);
+     })
+     .start();
+   // 期望输出
+   // 1 2 3
+   ```
+
+8. 编程题, 实现 koa 的洋葱模型, 没做出来
+
+   ```ts
+   async function log1(next: Next) {
+     console.log("log1 enter");
+     await next();
+     console.log("log1 out");
+   }
+   async function log2(next: Next) {
+     console.log("log2 enter");
+     await next();
+     console.log("log2 out");
+   }
+   async function log3(next: Next) {
+     console.log("log3 enter");
+     await next();
+     console.log("log3 out");
+   }
+
+   type Next = () => Promise<void>;
+   type Middleware = (next: Next) => Promise<void>;
+
+   // 我后来写的实现
+   function onionCompose(midwares: Middleware[]): Next {
+     const returnFnArr: Next[] = [() => Promise.resolve()];
+     midwares = midwares.reverse();
+     for (let i = 0; i < midwares.length; i++) {
+       returnFnArr.push(async () => midwares[i](returnFnArr[i]));
+     }
+     return returnFnArr[returnFnArr.length - 1];
+   }
+
+   // github 上看到的更优雅简洁的实现
+   function onionCompose2(midwares: Middleware[]): Next {
+     return midwares.reduceRight(
+       (composed: Next, fn) => () => fn(composed),
+       async () => {}
+     );
+   }
+
+   let onionFn = onionCompose([log1, log2, log3]);
+   onionFn();
+   ```
+
+9. 编程题, 找到数组中所有和为 target 的元素对并返回. 写出来了但是不太优雅
+
+   ```ts
+   function findTarget(arr: number[], target: number): number[][] {
+     // 遍历数组找到每个数和 target 相差多少
+     const restPart: number[] = [];
+     const number2Count: Record<number, number> = {};
+     for (let i = 0; i < arr.length; i++) {
+       restPart[i] = target - arr[i];
+       number2Count[arr[i]] = number2Count[arr[i]] + 1 || 1;
+     }
+     // 再遍历一遍找到有没有等于这个数的差的数
+     const returnArr = [];
+
+     for (let i = 0; i < arr.length; i++) {
+       const leftNumber = arr[i];
+       const rightNumber = restPart[i];
+       const rightNumberCount = number2Count[rightNumber];
+
+       if (rightNumberCount === undefined) continue;
+
+       if (leftNumber === rightNumber) {
+         if (rightNumberCount === 1) continue;
+         returnArr.push([leftNumber, rightNumber]);
+         number2Count[leftNumber] = undefined;
+       }
+
+       returnArr.push([leftNumber, rightNumber]);
+       number2Count[leftNumber] = undefined;
+       number2Count[rightNumber] = undefined;
+     }
+
+     return returnArr;
+   }
+
+   console.log(findTarget([32, 3, 5, 1, 30, 76, 2, 10, 29], 32));
+   ```
+
+10. 编程题, 实现一个类, 每次 new 他的时候得到的对象的 id 自增, 用了两种方法
+
+    ```ts
+    class Foo {
+      static __count = 0;
+      id: number;
+      constructor() {
+        Foo.__count++;
+        this.id = Foo.__count;
+      }
+    }
+
+    const Bar = (function getClassBar() {
+      let id = 0;
+      return class Bar {
+        id: number;
+        constructor() {
+          this.id = ++id;
+        }
+      };
+    })();
+
+    var a = new Foo(); // => {id: 1}
+    var b = new Foo(); // => {id: 2}
+    var a_bar = new Bar(); // => {id: 1}
+    var b_bar = new Bar(); // => {id: 2}
+    ```
+
+11. **vue3 新特性**, 讲了 composition api, 静态标记, Proxy
+12. **如何实现图片的裁剪? 音频呢?**, 图片裁剪用 canvas, 音频裁剪不会, 见
+    [用 Web 实现一个简易的音频编辑器](https://segmentfault.com/a/1190000021531979), 看了也不会系列
+
+> 555 二面面的好难面试官好严肃, 害怕...还好过了 qwq
