--- a/_面经/2021-12-01 抖音音乐实习面经.md
+++ b/_面经/2021-12-01 抖音音乐实习面经.md
@@ -228,3 +228,18 @@
     [用 Web 实现一个简易的音频编辑器](https://segmentfault.com/a/1190000021531979), 看了也不会系列
 
 > 555 二面面的好难面试官好严肃, 害怕...还好过了 qwq
+
+## 三面
+
+> 感觉不是很有参考价值((
+
+1. 讲讲你对 vue 和 react 的理解
+2. 讲讲 react 诞生的原因
+3. 虚拟 dom 带来了什么好处
+4. 对你所知道的后端框架的理解(我主要是讲了应用层面, 他更想听语言底层的区别)
+5. 讲了好久我的狼人杀项目和其中的设计模式
+6. 讲讲 http 和 web socket 在模式上的区别
+7. 你对自己的性格怎么评价
+8. 聊了很久职业规划
+
+> 三面就离谱, 面试官全程跟我讲些形而上的东西, 给我分享他对各种问题的理解
