fix: 修复 deepClone 循环引用问题

--- a/_面经/2022-3-23 飞书文档暑实面经.md
+++ b/_面经/2022-3-23 飞书文档暑实面经.md
@@ -28,6 +28,7 @@
 4. **实现深拷贝, 要处理循环引用, 使用上述缓存思想**: 代码如下 👇, 问了要不要处理 function 和 Symbol, 面试官说既然你说了说明你是懂的, 就不写了
 
    ```ts
+   // 这一版是错的, 循环引用处理的不对, 但是面试官好像没看出来(((
    function deepClone(object: any) {
      if (typeof object !== "object" || !object) {
        return object;
@@ -47,6 +48,34 @@
          const newVal = clone(o[key]);
          objectMap.set(o[key], newVal);
          newObject[key] = newVal;
+       }
+
+       return newObject;
+     }
+
+     return clone(object);
+   }
+
+   // 这个才是对的
+   function deepClone2(object: any) {
+     if (typeof object !== "object" || !object) {
+       return object;
+     }
+
+     const objectMap = new WeakMap<object, object>();
+
+     function clone(o: any) {
+       if (typeof o !== "object" || !o) {
+         return o;
+       }
+
+       if (objectMap.has(o)) return objectMap.get(o);
+
+       const newObject = {};
+       objectMap.set(o, newObject);
+
+       for (const key in o) {
+         newObject[key] = clone(o[key]);
        }
 
        return newObject;
