feat: add 2022-3-23 飞书文档暑实面经-二面

--- a/_面经/2022-3-23 飞书文档暑实面经.md
+++ b/_面经/2022-3-23 飞书文档暑实面经.md
@@ -63,6 +63,8 @@
      }
 
      const objectMap = new WeakMap<object, object>();
+     const returnObj = {};
+     objectMap.set(object, returnObj);
 
      function clone(o: any) {
        if (typeof o !== "object" || !o) {
@@ -124,3 +126,87 @@
    ```
 
 8. **讲讲 koa 的洋葱架构**: 讲出来了, 虽然语言组织比较混乱(
+
+## 二面
+
+1. 讲了好久项目, 主要问了狼人杀项目怎么确保同步, 最后顺着指引答出来了可以在应用层借鉴 tcp 那种确认帧的思想, 又问了项目里虚拟滚动的问题
+2. 手写`bind`:
+
+   ```js
+   //  请实现 Function.prototype.bind 使得以下代码输出 success
+   function Animal(name, color) {
+     this.name = name;
+     this.color = color;
+   }
+
+   Animal.prototype.say = function () {
+     return `I'm a ${this.color} ${this.name}`;
+   };
+
+   /**** 实现在这里 *****/
+   // 这是我一开始写的, 有问题, 面试官没看出来还说是对的qwq
+   Function.prototype.bind = function (thisArg, ...params) {
+     const returnFn = (...newParams) =>
+       this.call(thisArg, ...params, ...newParams);
+     returnFn.prototype = new this();
+     // returnFn.prototype = { constructor: this };
+     return returnFn;
+   };
+
+   // 改进版, 无敌!
+   Function.prototype.mybind = function (thisArg, ...params) {
+     const self = this;
+     const returnFn = function (...newParams) {
+       return self.call(
+         this instanceof self ? this : thisArg,
+         ...params,
+         ...newParams
+       );
+     };
+     returnFn.prototype = this.prototype;
+     return returnFn;
+   };
+
+   const Cat = Animal.mybind(null, "cat");
+   const cat = new Cat("white");
+
+   if (
+     cat.say() === "I'm a white cat" &&
+     cat instanceof Cat &&
+     cat instanceof Animal
+   ) {
+     console.log("success");
+   }
+   ```
+
+3. 算法题:
+
+   ```ts
+   /**
+    * 请用算法实现，从给定的无序、不重复的数组data中，取出n个数，使其相加和为sum
+    * 1. 数据有正有负
+    * 2. 数据不可重复使用
+    */
+   function findSum(data: number[], n: number, sum: number) {
+     function _findSum(
+       restNum: number[],
+       restN: number,
+       restSum: number,
+       usedNum: number[]
+     ) {
+       if (restN === 0 || restNum.length === 0) return null;
+       const [curNum, ...numLeft] = restNum;
+       if (curNum === restSum && n === 1) return [...usedNum, curNum];
+       else {
+         return (
+           _findSum(numLeft, restN - 1, restSum - curNum, [
+             ...usedNum,
+             curNum,
+           ]) || _findSum(numLeft, restN, restSum, usedNum)
+         );
+       }
+     }
+
+     return _findSum(data, n, sum, []);
+   }
+   ```
