feat: add 百度 and 腾讯二面

--- a/_面经/2022-04-12 腾讯游戏发布面试.md
+++ b/_面经/2022-04-12 腾讯游戏发布面试.md
@@ -103,3 +103,7 @@
 
 5. **你为什么学前端**, 答: 我觉得有意思
 6. **你觉得你持续学前端的动机是什么**, 答想挣钱找工作完成 kpi 完成公司希望你完成的项目, 面试官不满意追问: 更深层次的目的是啥? 啊, 我就是想挣钱啊...那要说的话就是为前端生态圈做点贡献, 让后来人学的更轻松少走弯路就行, 输出博客翻译文章之类的, 他差不多满意了
+
+## 二面
+
+聊人生
